# hledger-elster

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  PLAN.md  README.md  TODOS.md  build.rs  hledger-elster  pyproject.toml
.github/workflows/: check.yml  ci.yml
docs/adr/: 0001-hledger-as-source-of-truth.md  0002-bank-metadata-is-not-authoritative.md  0003-tax-layer-produces-auditable-artifacts.md  0004-tax-layer-rewrite.md  0005-rust-rewrite.md
docs/domain/: artifacts-and-auditability.md  elster-special-cases.md  known-source-data-quirks.md  ledger-tax-modeling.md  verification.md
docs/migration/: current-state.md  ledger-tagging-rollout.md  mapping-v1-to-hledger.md  monorepo-transition.md  open-questions.md  postings-export-schema.md  target-architecture.md
docs/specs/: README.md  afa.md  business-accounts.md  configuration.md  donations.md  export-hygiene.md  form-section-item-tags.md  health-care.md  vat-reverse-charge.md  vat.md
examples/: README.md
examples/ledger/: hledger.journal
scripts/: generate_features.py
specs/: 00-configuration.md  01-csv-xlsx-equivalence.md  01-export-hygiene.md  02-form-section-item-tags.md  02-traceability.md  05-vat.md  09-afa.md  09-cli-help.md  10-donations.md  11-commit-evidence.md  README.md
src/: afa.rs  aggregates.rs  classification.rs  cli.py  commit_evidence.rs  config.py  config.rs  csv_import.rs  dataset.rs  drawing.rs  enrich.rs  est.rs  euer.rs  herleitung.rs  journal.rs  lib.rs  main.rs  paths.py  paths.rs  periods.rs  posting.rs  report_writer.rs  test_support.py  ust.rs
src/calculate/: afa.py  aggregates.py  drawing.py  generate_report.py
src/calculate/report/: classification.py  est.py  euer.py  herleitung.py  periods.py  ust.py
src/domain/: dataset.py  posting.py
src/ingest/: enrich.py
tests/: conftest.py  cucumber.rs  spec_generation.py  test_business_account_fallback.py  test_e2e_examples.py  test_est_examples.py  test_euer_examples.py  test_generate_report_examples.py  test_generated_features.py  test_sign_regressions.py
tests/examples/e2e/business-account-fallback/: journal.journal
tests/examples/e2e/donations/: journal.journal
tests/examples/e2e/health-care-split/: journal.journal
tests/examples/e2e/vat-reversal/: journal.journal
tests/examples/e2e/vat-year-vs-period/: journal.journal
tests/features/: environment.py
tests/features/steps/: elster_steps.py
