[package]
name = "hledger-elster"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "German tax calculation and ELSTER-oriented exports for hledger"

[lib]
name = "hledger_elster"
path = "src/lib.rs"

[[bin]]
name = "hledger-elster"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.3", features = ["derive"] }
csv = "1.4.0"
indexmap = "2.14.0"
regex = "1.13.1"
rust_decimal = "1.42.1"
rust_xlsxwriter = "0.96"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
toml = "1.1.3"
unicode-normalization = "0.1.25"
walkdir = "2.5.0"
zip = "8.6.0"

[dev-dependencies]
calamine = "0.36.0"
cucumber = { version = "0.23", features = ["macros"] }
tempfile = "3.27.0"
tokio = { version = "1.53.1", features = ["macros", "process", "rt-multi-thread", "time"] }

[build-dependencies]
markdown-to-cucumber = { git = "https://github.com/roschaefer/markdown-to-cucumber.git", branch = "main" }

[[test]]
name = "cucumber"
harness = false
