[project]
name = "hledger-elster"
version = "0.1.0"
description = "German tax calculation and ELSTER-oriented exports for hledger"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
test = [
    "behave>=1.3.3",
    "pytest>=9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
