[project]
name = "hledger-elster"
version = "0.1.0"
description = "German tax calculation and ELSTER-oriented exports for hledger"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
test = [
    "behave>=1.3.3",
    "pytest>=9",
    "ruff>=0.14.0",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "E501",
]
